manifests/converternow/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converternow
  namespace: jovian-prod
  labels:
    app: converternow
    service: tools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: converternow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: converternow
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: converternow
        image: ghcr.io/ferraridamiano/converternow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: convertnow-http
          protocol: TCP
