manifests/converternow/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converternow-service
  namespace: jovian-prod
spec:
  selector:
    app: converternow
  ports:
    - port: 80
      targetPort: converternow-http
      protocol: TCP
      name: converternow-http
